# hw_29

./: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/management/commands/: import_data.py
ads/management/data/: __init__.py  csv_to_jsons.py
ads/migrations/: 0001_initial.py  0002_initial.py
project/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
